# sgb

./: app.py  pyproject.toml  requirements.txt
assets/: compare.css  script.js  styles.css
components/: compare.py  faq.py  header.py  hero.py  love.py  timeline.py  top.py
components/explore/: hero.py  table.py
components/home/: compare.py  faq.py  hero.py  timeline.py  top.py
data/: explore.py  gold.csv  sgb.csv  sgb_2023-03-23.csv  top.py
pages/: explore.py  home.py
