[tool.poetry]
name = "sgb"
version = "0.1.0"
description = ""
authors = ["Snehil Vijay <snehilvj@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.9.1"
dash-mantine-components = "^0.12.0"
dash-iconify = "^0.1.2"
pandas = "^1.5.3"
Babel = "^2.12.1"
dash-ag-grid = "2.0.0a4"
gunicorn = "^20.1.0"
dash-mantine-react-table = "^0.0.1"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
